:monocle_face: summarize breed by country

--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -5,17 +5,23 @@
    "id": "3cc84f47-db82-43eb-99fd-78768ecd2a99",
    "metadata": {},
    "source": [
-    "# SMARTER SUMMARY (2023/09/27)\n",
+    "# SMARTER SUMMARY (2024/03/01)\n",
     "* [Dataset composition](#datasets-composition)\n",
-    "    - [Foreground / background datasets](#foreground-vs-background-datasets)\n",
-    "    - [Datasets by chip type](#datasets-by-chip-type)\n",
+    "    * [Foreground / background datasets](#foreground-vs-background-datasets)\n",
+    "    * [Datasets by chip type](#datasets-by-chip-type)\n",
     "* [Samples composition](#samples-composition)\n",
-    "    - [Foreground / background samples for sheep](#foreground-background-samples-sheep)\n",
-    "    - [Sheep samples by chip type](#sheep-sample-by-chip-type)\n",
-    "    - [Sheep sample locations](#sheep-sample-locations)\n",
-    "    - [Foreground / background samples for goat](#foreground-background-samples-goat)\n",
-    "        - [Grece foreground goat data](#greece-foreground-goat-data)\n",
-    "        - [Sweden foreground goat data](#sweden-foreground-goat-data)"
+    "    * [Foreground / background samples for sheep](#foreground-background-samples-sheep)\n",
+    "    * [Sheep samples by chip type](#sheep-sample-by-chip-type)\n",
+    "    * [Sheep sample locations](#sheep-sample-locations)\n",
+    "    * [Foreground / background samples for goat](#foreground-background-samples-goat)\n",
+    "        * [Greece foreground goat data](#greece-foreground-goat-data)\n",
+    "        * [Sweden foreground goat data](#sweden-foreground-goat-data)\n",
+    "* [Draw samples by country](#samples-by-country)\n",
+    "  * [Sheep samples by country](#sheep-samples-by-country)\n",
+    "  * [Goat samples by country](#goat-samples-by-country)\n",
+    "* [Draw breeds by country](#breeds-by-country)\n",
+    "  * [Sheep breeds by country](#sheep-breeds-by-country)\n",
+    "  * [Goat breeds by country](#goat-breeds-by-country)"
    ]
   },
   {
@@ -46,7 +52,7 @@
     "\n",
     "def add_geometry(df: pd.DataFrame):\n",
     "    \"\"\"Add a geometry column from locations\"\"\"\n",
-    "    \n",
+    "\n",
     "    def get_geometry(value):\n",
     "        if isinstance(value, dict):\n",
     "            return Point(*value['coordinates'][0])\n",
@@ -148,11 +154,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foreground_sheeps = SampleSheep.objects.filter(type_=\"foreground\").fields(country=True, breed=True, chip_name=True, locations=True)\n",
-    "background_sheeps = SampleSheep.objects.filter(type_=\"background\").fields(country=True, breed=True, chip_name=True, locations=True)\n",
-    "samples_sheep = pd.Series({\"foreground\": foreground_sheeps.count(), \"background\": background_sheeps.count()}, name=\"Sheeps\")\n",
-    "plot = samples_sheep.plot.pie(y=\"Sheeps\", figsize=(8,8), shadow=True, startangle=90, rotatelabels=45, autopct='%1.1f%%')\n",
-    "_ = plt.title(\"Background VS Foreground sheeps\")\n",
+    "foreground_sheep = SampleSheep.objects.filter(type_=\"foreground\").fields(country=True, breed=True, chip_name=True, locations=True)\n",
+    "background_sheep = SampleSheep.objects.filter(type_=\"background\").fields(country=True, breed=True, chip_name=True, locations=True)\n",
+    "samples_sheep = pd.Series({\"foreground\": foreground_sheep.count(), \"background\": background_sheep.count()}, name=\"Sheep\")\n",
+    "plot = samples_sheep.plot.pie(y=\"Sheep\", figsize=(8,8), shadow=True, startangle=90, rotatelabels=45, autopct='%1.1f%%')\n",
+    "_ = plt.title(\"Background VS Foreground sheep\")\n",
     "plt.ylabel(None)\n",
     "plt.savefig('sheep-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
@@ -185,7 +191,7 @@
    "source": [
     "sheep_by_chip = defaultdict(list)\n",
     "for chip_name in SampleSheep.objects.distinct(\"chip_name\"):\n",
-    "    sheep_by_chip['chip_name'].append(chip_name) \n",
+    "    sheep_by_chip['chip_name'].append(chip_name)\n",
     "    sheep_by_chip['count'].append(SampleSheep.objects.filter(chip_name=chip_name).count())\n",
     "sheep_by_chip = pd.DataFrame.from_dict(sheep_by_chip).set_index(\"chip_name\")"
    ]
@@ -221,16 +227,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp = foreground_sheeps.to_json()\n",
-    "foreground_sheeps = pd.read_json(tmp).dropna(axis=0)\n",
-    "tmp = background_sheeps.to_json()\n",
-    "background_sheeps = pd.read_json(tmp).dropna(axis=0)\n",
+    "tmp = foreground_sheep.to_json()\n",
+    "foreground_sheep = pd.read_json(tmp).dropna(axis=0)\n",
+    "tmp = background_sheep.to_json()\n",
+    "background_sheep = pd.read_json(tmp).dropna(axis=0)\n",
     "\n",
-    "foreground_sheeps = fix_id(foreground_sheeps)\n",
-    "background_sheeps = fix_id(background_sheeps)\n",
+    "foreground_sheep = fix_id(foreground_sheep)\n",
+    "background_sheep = fix_id(background_sheep)\n",
     "\n",
-    "foreground_sheeps = add_geometry(foreground_sheeps)\n",
-    "background_sheeps = add_geometry(background_sheeps)"
+    "foreground_sheep = add_geometry(foreground_sheep)\n",
+    "background_sheep = add_geometry(background_sheep)"
    ]
   },
   {
@@ -266,11 +272,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "background_sheeps = gpd.GeoDataFrame(background_sheeps, crs=\"EPSG:4326\")\n",
-    "background_sheeps = background_sheeps.set_crs(world.crs)\n",
+    "background_sheep = gpd.GeoDataFrame(background_sheep, crs=\"EPSG:4326\")\n",
+    "background_sheep = background_sheep.set_crs(world.crs)\n",
     "\n",
-    "foreground_sheeps = gpd.GeoDataFrame(foreground_sheeps, crs=\"EPSG:4326\")\n",
-    "foreground_sheeps = foreground_sheeps.set_crs(world.crs)"
+    "foreground_sheep = gpd.GeoDataFrame(foreground_sheep, crs=\"EPSG:4326\")\n",
+    "foreground_sheep = foreground_sheep.set_crs(world.crs)"
    ]
   },
   {
@@ -291,8 +297,8 @@
     "fig, ax = plt.subplots(figsize=(20,20))\n",
     "ax.set_aspect('equal')\n",
     "world.plot(ax=ax, color='white', edgecolor='gray')\n",
-    "plot = foreground_sheeps.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
-    "plot = background_sheeps.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
+    "plot = foreground_sheep.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
+    "plot = background_sheep.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
     "plot = ax.legend()\n",
     "_ = plt.title(\"SMARTER Sheep Samples\")\n",
     "plt.savefig('sheep-foreground-vs-background-map.png', dpi=300, bbox_inches='tight')\n",
@@ -308,8 +314,8 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(20,20))\n",
     "world.plot(ax=ax, color='white', edgecolor='gray')\n",
-    "plot = foreground_sheeps.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
-    "plot = background_sheeps.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
+    "plot = foreground_sheep.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
+    "plot = background_sheep.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
     "plot = ax.legend()\n",
     "_ = plt.title(\"SMARTER Sheep Samples foreground\")\n",
     "_ = plt.xlim([10,140])\n",
@@ -476,8 +482,10 @@
    "id": "8c3c128e-f8a7-47fd-812b-89266bcec1ca",
    "metadata": {},
    "source": [
-    "## Draw samples by countries\n",
-    "### Sheep by country"
+    "<a id='samples-by-country'></a>\n",
+    "## Draw samples by country\n",
+    "<a id='sheep-samples-by-country'></a>\n",
+    "### Sheep samples by country"
    ]
   },
   {
@@ -495,10 +503,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_sheeps = pd.concat([foreground_sheeps, background_sheeps], axis=0)\n",
-    "sheeps_by_country = all_sheeps.value_counts('country')\n",
-    "sheeps_by_country = pd.DataFrame(data=sheeps_by_country, columns=['count']).reset_index()\n",
-    "sheeps_by_country['iso_a3'] = sheeps_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)"
+    "all_sheep = pd.concat([foreground_sheep, background_sheep], axis=0)\n",
+    "sheep_by_country = all_sheep.value_counts('country')\n",
+    "sheep_by_country = pd.DataFrame(data=sheep_by_country, columns=['count']).reset_index()\n",
+    "sheep_by_country['iso_a3'] = sheep_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)"
    ]
   },
   {
@@ -524,10 +532,10 @@
     "            return \"-99\"\n",
     "    else:\n",
     "        return iso_a3\n",
-    "    \n",
+    "\n",
     "world['iso_a3'] = world[['name', 'iso_a3']].apply(lambda df: fix_iso_a3(df['name'], df['iso_a3']), axis=1)\n",
-    "sheeps_by_country = pd.merge(sheeps_by_country, world, how=\"outer\", on='iso_a3')[['country', 'iso_a3', 'continent', 'geometry', 'count']]\n",
-    "sheeps_by_country = gpd.GeoDataFrame(sheeps_by_country)"
+    "sheep_by_country = pd.merge(sheep_by_country, world, how=\"outer\", on='iso_a3')[['country', 'iso_a3', 'continent', 'geometry', 'count']]\n",
+    "sheep_by_country = gpd.GeoDataFrame(sheep_by_country)"
    ]
   },
   {
@@ -548,10 +556,10 @@
     "fig, ax = plt.subplots(figsize=(20,20))\n",
     "divider = make_axes_locatable(ax)\n",
     "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
-    "plot = sheeps_by_country.plot(\n",
-    "    column='count', \n",
-    "    ax=ax, \n",
-    "    legend=True, \n",
+    "plot = sheep_by_country.plot(\n",
+    "    column='count',\n",
+    "    ax=ax,\n",
+    "    legend=True,\n",
     "    cax=cax,\n",
     "    missing_kwds={\"color\": \"lightgrey\", \"label\": \"Missing values\"})\n",
     "_ = ax.set_title(\"SMARTER Sheep Samples by country\")\n",
@@ -564,7 +572,8 @@
    "id": "f4dcb1c3-3420-4122-a14a-62e7d12297be",
    "metadata": {},
    "source": [
-    "### Goat by country"
+    "<a id='goat-samples-by-country'></a>\n",
+    "### Goat samples by country"
    ]
   },
   {
@@ -602,9 +611,9 @@
     "divider = make_axes_locatable(ax)\n",
     "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
     "plot = goats_by_country.plot(\n",
-    "    column='count', \n",
-    "    ax=ax, \n",
-    "    legend=True, \n",
+    "    column='count',\n",
+    "    ax=ax,\n",
+    "    legend=True,\n",
     "    cax=cax,\n",
     "    missing_kwds={\"color\": \"lightgrey\", \"label\": \"Missing values\"})\n",
     "_ = ax.set_title(\"SMARTER Goat Samples by country\")\n",
@@ -613,11 +622,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "684399a7-a88f-44db-a98a-b5b1400ba4cf",
    "metadata": {},
+   "source": [
+    "<a id='breeds-by-country'></a>\n",
+    "## Draw breeds by country\n",
+    "<a id='sheep-breed-by-country'></a>\n",
+    "### Sheep breeds by country\n",
+    "Try to display the different breed types for each country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d660d28",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "sheep_breeds_by_country = all_sheep[[\"country\", \"breed\"]].drop_duplicates().reset_index(drop=True).value_counts(\"country\")\n",
+    "sheep_breeds_by_country = pd.DataFrame(data=sheep_breeds_by_country, columns=['count']).reset_index()\n",
+    "sheep_breeds_by_country['iso_a3'] = sheep_breeds_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)\n",
+    "sheep_breeds_by_country = pd.merge(sheep_breeds_by_country, world, how=\"outer\", on='iso_a3')[['country', 'iso_a3', 'continent', 'geometry', 'count']]\n",
+    "sheep_breeds_by_country = gpd.GeoDataFrame(sheep_breeds_by_country)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0630d28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20,20))\n",
+    "divider = make_axes_locatable(ax)\n",
+    "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
+    "plot = sheep_breeds_by_country.plot(\n",
+    "    column='count',\n",
+    "    ax=ax,\n",
+    "    legend=True,\n",
+    "    cax=cax,\n",
+    "    missing_kwds={\"color\": \"lightgrey\", \"label\": \"Missing values\"})\n",
+    "_ = ax.set_title(\"SMARTER Sheep breeds by country\")\n",
+    "plt.savefig('sheep-breeds-by-country.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86256cb5",
+   "metadata": {},
+   "source": [
+    "<a id='goat-breeds-by-country'></a>\n",
+    "### Goat breeds by country\n",
+    "Attempt to display goat breeds by country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a11f36e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goat_breeds_by_country = all_goats[[\"country\", \"breed\"]].drop_duplicates().reset_index(drop=True).value_counts(\"country\")\n",
+    "goat_breeds_by_country = pd.DataFrame(data=goat_breeds_by_country, columns=['count']).reset_index()\n",
+    "goat_breeds_by_country['iso_a3'] = goat_breeds_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)\n",
+    "goat_breeds_by_country = pd.merge(goat_breeds_by_country, world, how=\"outer\", on='iso_a3')[['country', 'iso_a3', 'continent', 'geometry', 'count']]\n",
+    "goat_breeds_by_country = gpd.GeoDataFrame(goat_breeds_by_country)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ae313a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20,20))\n",
+    "divider = make_axes_locatable(ax)\n",
+    "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
+    "plot = goat_breeds_by_country.plot(\n",
+    "    column='count',\n",
+    "    ax=ax,\n",
+    "    legend=True,\n",
+    "    cax=cax,\n",
+    "    missing_kwds={\"color\": \"lightgrey\", \"label\": \"Missing values\"})\n",
+    "_ = ax.set_title(\"SMARTER Goat breeds by country\")\n",
+    "plt.savefig('goat-breeds-by-country.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50445a3b",
+   "metadata": {},
    "source": []
   }
  ],
