:monocle_face: update notebooks

--- a/notebooks/exploratory/0.26.0-bunop-guisandesa.ipynb
+++ b/notebooks/exploratory/0.26.0-bunop-guisandesa.ipynb
@@ -146,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a952d068174a41319b80040d02534b4c",
+       "model_id": "12c36628beb54c40a1312ac74d24e3c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,7 +187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b1dd34bbb6948bbb896b9d7558f7bfc",
+       "model_id": "be208ae027924004a9c2dcec31626854",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -345,9 +345,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
