--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -5,7 +5,7 @@
    "id": "3cc84f47-db82-43eb-99fd-78768ecd2a99",
    "metadata": {},
    "source": [
-    "# SMARTER SUMMARY (2024/03/01)\n",
+    "# SMARTER SUMMARY (2024/05/23)\n",
     "* [Dataset composition](#datasets-composition)\n",
     "    * [Foreground / background datasets](#foreground-vs-background-datasets)\n",
     "    * [Datasets by chip type](#datasets-by-chip-type)\n",
@@ -33,6 +33,8 @@
    "source": [
     "import json\n",
     "from collections import defaultdict\n",
+    "from io import StringIO\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from shapely.geometry import Point\n",
@@ -40,7 +42,7 @@
     "import pycountry\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
-    "from src.features.smarterdb import global_connection, Dataset, SampleSheep, SampleGoat\n",
+    "from src.features.smarterdb import global_connection, Dataset, SampleSheep, SampleGoat, Country\n",
     "\n",
     "conn = global_connection()\n",
     "\n",
@@ -227,9 +229,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp = foreground_sheep.to_json()\n",
+    "tmp = StringIO(foreground_sheep.to_json())\n",
     "foreground_sheep = pd.read_json(tmp).dropna(axis=0)\n",
-    "tmp = background_sheep.to_json()\n",
+    "tmp = StringIO(background_sheep.to_json())\n",
     "background_sheep = pd.read_json(tmp).dropna(axis=0)\n",
     "\n",
     "foreground_sheep = fix_id(foreground_sheep)\n",
@@ -357,9 +359,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp = foreground_goats.to_json()\n",
+    "tmp = StringIO(foreground_goats.to_json())\n",
     "foreground_goats = pd.read_json(tmp).dropna(thresh=1, axis=1)\n",
-    "tmp = background_goats.to_json()\n",
+    "tmp = StringIO(background_goats.to_json())\n",
     "background_goats = pd.read_json(tmp).dropna(thresh=1, axis=1)\n",
     "\n",
     "foreground_goats = fix_id(foreground_goats)\n",
@@ -506,7 +508,7 @@
     "all_sheep = pd.concat([foreground_sheep, background_sheep], axis=0)\n",
     "sheep_by_country = all_sheep.value_counts('country')\n",
     "sheep_by_country = pd.DataFrame(data=sheep_by_country, columns=['count']).reset_index()\n",
-    "sheep_by_country['iso_a3'] = sheep_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)"
+    "sheep_by_country['iso_a3'] = sheep_by_country['country'].apply(lambda country: Country.objects.get(name=country).alpha_3)"
    ]
   },
   {
@@ -586,7 +588,7 @@
     "all_goats = pd.concat([foreground_goats, background_goats], axis=0)\n",
     "goats_by_country = all_goats.value_counts('country')\n",
     "goats_by_country = pd.DataFrame(data=goats_by_country, columns=['count']).reset_index()\n",
-    "goats_by_country['iso_a3'] = goats_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)"
+    "goats_by_country['iso_a3'] = goats_by_country['country'].apply(lambda country: Country.objects.get(name=country).alpha_3)"
    ]
   },
   {
@@ -642,7 +644,7 @@
    "source": [
     "sheep_breeds_by_country = all_sheep[[\"country\", \"breed\"]].drop_duplicates().reset_index(drop=True).value_counts(\"country\")\n",
     "sheep_breeds_by_country = pd.DataFrame(data=sheep_breeds_by_country, columns=['count']).reset_index()\n",
-    "sheep_breeds_by_country['iso_a3'] = sheep_breeds_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)\n",
+    "sheep_breeds_by_country['iso_a3'] = sheep_breeds_by_country['country'].apply(lambda country: Country.objects.get(name=country).alpha_3)\n",
     "sheep_breeds_by_country = pd.merge(sheep_breeds_by_country, world, how=\"outer\", on='iso_a3')[['country', 'iso_a3', 'continent', 'geometry', 'count']]\n",
     "sheep_breeds_by_country = gpd.GeoDataFrame(sheep_breeds_by_country)"
    ]
@@ -687,7 +689,7 @@
    "source": [
     "goat_breeds_by_country = all_goats[[\"country\", \"breed\"]].drop_duplicates().reset_index(drop=True).value_counts(\"country\")\n",
     "goat_breeds_by_country = pd.DataFrame(data=goat_breeds_by_country, columns=['count']).reset_index()\n",
-    "goat_breeds_by_country['iso_a3'] = goat_breeds_by_country['country'].apply(lambda country: pycountry.countries.search_fuzzy(country)[0].alpha_3)\n",
+    "goat_breeds_by_country['iso_a3'] = goat_breeds_by_country['country'].apply(lambda country: Country.objects.get(name=country).alpha_3)\n",
     "goat_breeds_by_country = pd.merge(goat_breeds_by_country, world, how=\"outer\", on='iso_a3')[['country', 'iso_a3', 'continent', 'geometry', 'count']]\n",
     "goat_breeds_by_country = gpd.GeoDataFrame(goat_breeds_by_country)"
    ]
@@ -712,17 +714,11 @@
     "plt.savefig('goat-breeds-by-country.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "50445a3b",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -736,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
