--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -39,10 +39,10 @@
     "import matplotlib.pyplot as plt\n",
     "from shapely.geometry import Point\n",
     "import geopandas as gpd\n",
-    "import pycountry\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
     "from src.features.smarterdb import global_connection, Dataset, SampleSheep, SampleGoat, Country\n",
+    "from src.features.utils import countries\n",
     "\n",
     "conn = global_connection()\n",
     "\n",
@@ -529,7 +529,7 @@
     "def fix_iso_a3(name, iso_a3):\n",
     "    if iso_a3 == '-99':\n",
     "        try:\n",
-    "            return pycountry.countries.search_fuzzy(name.split()[-1])[0].alpha_3\n",
+    "            return countries.search_fuzzy(name.split()[-1])[0].alpha_3\n",
     "        except LookupError:\n",
     "            return \"-99\"\n",
     "    else:\n",
